# auto-ad

./: .gitignore  README.md  pyproject.toml
resources/styles/: style_sheet.py
src/: error_logger.py  gap_detector.py  input_handler.py  main.py  models.py  output_generator.py  ui.py
src/utils/: encoding.py
