[tool.poetry]
name = "auto-ad"
version = "0.1.0"
description = ""
authors = ["0xmrwn <mkhalis@equancy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pysrt = "^1.1.2"
pyinstaller = "^6.11.1"
customtkinter = "^5.2.2"
chardet = "^5.0.0"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
